All cashier summery Changes Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_report_transfer_issue_bill_item.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_transfer_issue_bill_item.xhtml
@@ -49,10 +49,6 @@
                         <h:panelGroup id="gpBillPreview">
                             <p:dataTable id="tbl" styleClass="noBorder normalFont" 
                                          value="#{reportsTransfer.transferItems}" var="i"  
-                                         rows="20"
-                                         paginator="true"
-                                         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                         rowsPerPageTemplate="20, 50, 100" 
                                          >
                                 <f:facet name="header">
                                     <h:outputLabel value="Transfer List To "/>
@@ -118,7 +114,7 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Quantity"/>
                                     </f:facet> 
-                                    <h:outputLabel value="#{i.pharmaceuticalBillItem.qty}" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}"   >
+                                    <h:outputLabel value="#{i.pharmaceuticalBillItem.qty}" >
                                         <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                     </h:outputLabel>
                                 </p:column>
@@ -136,17 +132,17 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Cost Value"/>
                                     </f:facet>
-                                    <h:outputLabel value="#{i.pharmaceuticalBillItem.itemBatch.purcahseRate * i.pharmaceuticalBillItem.qty}"  rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" >
+                                    <h:outputLabel value="#{i.pharmaceuticalBillItem.itemBatch.purcahseRate * i.pharmaceuticalBillItem.qty}"   >
                                         <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                     </h:outputLabel>                                  
                                 </p:column>
 
                                 <p:columnGroup type="footer">
                                     <p:row>
-                                        <p:column colspan="5"/>
+                                        <p:column colspan="6"/>
                                         <p:column style="text-align: right;" >
                                             <f:facet name="footer">
-                                                <h:outputLabel value="#{reportsTransfer.purchaseValue}" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" >
+                                                <h:outputLabel value="#{reportsTransfer.purchaseValue}" >
                                                     <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                                 </h:outputLabel>
                                             </f:facet>
