add cancelled and refund summery Signed-off-by: arunawijesinghe <acswijesinghe91@gmail.com>

--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -137,6 +137,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users(By Appoinment Date)" action="/channel/report_cashier_vise_count_1" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Monthly All Vat report" action="/channel/channel_report_monthly_all_vat" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Dashboard" action="/channel/channel_report_dailyChannelAndScanCount_barChart" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Cancelled and Refund Bill report" action="/channel/daily_refund_bill_report" />
 
                                     </h:panelGrid>
                                 </p:panel>
