--- a/src/main/webapp/reportLab/collecting_center_report_history_1.xhtml
+++ b/src/main/webapp/reportLab/collecting_center_report_history_1.xhtml
@@ -35,7 +35,7 @@
                             <p:column>#{ix.institutionCode}</p:column>
                             <p:column>#{ix.name}</p:column>
                         </p:autoComplete>
-                        <p:outputLabel value="Agent Name" />
+                        <p:outputLabel value="Show Patient Name" />
                         <p:selectBooleanCheckbox value="#{channelReportController.showPatient}" />
 
                         <p:commandButton action="#{channelReportController.createCollectingCenterHistorySubTable}" value="Fill" ajax="false" ></p:commandButton> 
