--- a/src/main/webapp/channel/channel_report_dailyChannelAndScanCount_barChart.xhtml
+++ b/src/main/webapp/channel/channel_report_dailyChannelAndScanCount_barChart.xhtml
@@ -4,12 +4,11 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:autocomplete="http://java.sun.com/jsf/composite/autocomplete">
-
+      xmlns:autocomplete="http://java.sun.com/jsf/composite/autocomplete"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
-
 
                 <!--monthly channel and scan count-->
                 <script type="text/javascript">
@@ -39,6 +38,7 @@
 //                        ]);
 
                         var options = {
+                            Title: 'Monthly Channel And Scan Count',
                             hAxis: {
                                 title: 'Date'
                             },
@@ -119,10 +119,14 @@
                 <script type="text/javascript">
                     google.charts.load('current', {packages: ['corechart', 'bar']});
                     google.charts.setOnLoadCallback(drawBasic);
-
                     function drawBasic() {
 
                         var rowdata =#{googleChartController.drawCollectionCenterInvestigationCountChart()}
+
+                        if (rowdata === "[]") {
+                            document.getElementById("p").value = "New text!";
+                        }
+
                         var data = google.visualization.arrayToDataTable(rowdata);
 //                        data.addColumn('timeofday', 'Time of Day');
 //                        data.addColumn('number', 'Motivation Level');
@@ -141,23 +145,21 @@
 //                        ]);
 
                         var options = {
-                            title: 'Collecting Centers Investigation ',
+                            title: 'Motivation and Energy Level Throughout the Day',
                             hAxis: {
-                                title: 'Collecting Center',
-//                                format: 'h:mm a',
-//                                viewWindow: {
-//                                    min: [7, 30, 0],
-//                                    max: [17, 30, 0]
-//                                }
+                                title: 'Time of Day',
+                                format: 'h:mm a',
+                                viewWindow: {
+                                    min: [7, 30, 0],
+                                    max: [17, 30, 0]
+                                }
                             },
                             vAxis: {
-                                title: 'Counts'
+                                title: 'Rating (scale of 1-10)'
                             }
                         };
-
                         var chart = new google.visualization.ColumnChart(
                                 document.getElementById('barChart'));
-
                         chart.draw(data, options);
                     }
                 </script>
@@ -207,60 +209,63 @@
                         chart.draw(data, options);
                     }
                 </script>
-                <h1 style="color: #107710">RUHUNU HOSPITAL DASHBOARD</h1>
-                <h3>Welcome <h:outputLabel value="#{sessionController.loggedUser.webUserPerson.name}"/></h3>
-                <h:panelGrid columns="3">
-                    <p:panel >
-                        <div id="chart_div" style="width: 1000px; height: 400px;"></div>
-                    </p:panel>
-                    <p:panel >
-                        <div id="piechart" style="width:400px; height: 400px;">
-
-                        </div>
-                    </p:panel>
-                    <p:panel >
-                        <div id="piechart1" style="width: 400px; height: 400px;">
-
-                        </div>
-                    </p:panel>
-                </h:panelGrid>
-                <h:panelGrid columns="3">
-
-                    <p:panel >
-                        <div id="piechart2" style="width: 400px; height: 300px;">
-
-                        </div>
-                    </p:panel>
-                    <p:panel >
-                        <div id="piechart3" style="width: 400px; height: 300px;">
-
-                        </div>
-                    </p:panel>
-                    <p:panel >
-                        <div id="barChart" style="width: 400px; height: 300px;">
-
-                        </div>
-                    </p:panel>
-                    <p:panel >
-                        <div id="piechart5" style="width: 400px; height: 300px;">
-
-                        </div>
-                    </p:panel>
-                    <p:panel >
-                        <div id="piechart6" style="width: 400px; height: 300px;">
-
-                        </div>
-                    </p:panel>
-                    <p:panel >
-
-                        <div id="piechart7" style="width: 400px; height: 300px;">
-
-                        </div>
-                    </p:panel>
-
-                </h:panelGrid>
 
 
+                <p:panelGrid style="margin-top:20px; width: 1278px;">
+                    <f:facet name="header">
+                        <p:row>
+                            <p:column colspan="6"><h3>Ruhunu Hospital Diagnosis</h3>
+                                <h5>A Friendly Smile cures a thousand illnesses</h5></p:column>
+
+                        </p:row>
+
+
+                    </f:facet>
+
+                    <p:row>
+                        <p:column rowspan="11" style="width: 250px;">
+
+                            <p:panel >
+                                other data1
+                            </p:panel>
+                            <p:panel >
+                                other data2
+                            </p:panel>
+                        </p:column>
+
+                        <p:column colspan="12" >
+                            <div id="chart_div" style="height: 350px; width: 1000px"></div>
+                        </p:column>
+
+
+
+                    </p:row>
+
+                    <p:row>
+                        <p:column><div id="piechart" style="width: 290px;"></div></p:column>
+                        <p:column><div id="piechart1" style="width: 290px;"></div></p:column>
+                        <p:column><div id="piechart2" style="width: 290px;"></div></p:column>
+                        <p:column><div id="piechart3" style="width: 290px;"></div></p:column>
+
+                    </p:row>
+                    <p:row>
+                        <p:column><div id="barChart" style="width: 290px;"></div></p:column>
+                        <p:column><div id="piechart5" style="width: 290px;"></div></p:column>
+                        <p:column><div id="piechart6" style="width: 290px;"></div></p:column>
+                        <p:column><div id="piechart7" style="width: 290px;"></div></p:column>
+
+
+                    </p:row>
+
+
+
+
+
+
+
+
+
+                </p:panelGrid>
 
 
 
