--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -96,22 +96,27 @@
                 <script type="text/javascript">
                     google.charts.load('current', {packages: ['corechart', 'bar']});
                     google.charts.setOnLoadCallback(drawBasic);
-
                     function drawBasic() {
 
                         var rowdata =#{googleChartController.drawCollectionCenterInvestigationCountChart()}
+
+                        if (rowdata === "[]") {
+                            document.getElementById("p").value = "New text!";
+                        }
+
                         var data = google.visualization.arrayToDataTable(rowdata);
                         var options = {
-//                                title: 'Collecting Centers Investigation ',
+                           
                             hAxis: {
-                                title: 'Collecting Center',
+                                title: 'Collecting Center'
+                               
                             },
                             vAxis: {
-                                title: 'Counts'
+                                title: 'Count'
                             }
                         };
-                        var chart = new google.visualization.ColumnChart(document.getElementById('barChart'));
-
+                        var chart = new google.visualization.ColumnChart(
+                                document.getElementById('barChart'));
                         chart.draw(data, options);
                     }
                 </script>
@@ -209,7 +214,7 @@
 
                                 </div>
                             </p:panel>
-                            <p:panel header="Invstigation Counts Of ollecting Centers" >
+                            <p:panel header="Invstigation Counts Of Collecting Centers" >
                                 <div id="barChart" style="width: 525px; height: 300px;">
 
                                 </div>
@@ -224,7 +229,7 @@
 
                                 </div>
                             </p:panel>
-                            <p:panel header="Totl Income Of Hospital By Section" >
+                            <p:panel header="Total Income Of Hospital By Section" >
 
                                 <div id="piechart7" style="width: 525px; height: 300px;">
 
